# BlockEditor

./: .gitignore  BlockEditor.cbp  BlockEditor_CXX_Debug_cotire.cmake  BlockEditor_CXX_cotire.cmake  BlockEditor_automoc.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  moc_blockscene.cpp  moc_highlighter.cpp  moc_layout.cpp  moc_lineeditor.cpp  moc_linenumbers.cpp  moc_mainview.cpp  moc_mainwindow.cpp  moc_minimapview.cpp  moc_parser.cpp
_install/: BlockEditor
_install/examples_scripts/: echo.lua  echo_2.lua  read.lua
_install/scripts/grammars/lua/: grammar.lua  style_new.lua
examples_scripts/: echo.lua~  max.lua  read_big.lua
include/: blockeditorwidget.h  blockscene.h  highlighter.h  lineeditor.h  mainview.h  mainwindow.h  minimapview.h  parser.h
include/item/: abstractelement.h  blankitem.h  elementbuilder.h  item.h  layout.h  standardelementbuilder.h  textitem.h
include/item/state/: elementchanged.h  elementinvalid.h  elementstable.h  elementstate.h  elementvalid.h
include/scene/: abstractelement.h  blankitem.h  blockscene.h  item.h  layout.h  linenumbers.h  parser.h  rectitemlayout.h  reparser.h  sceneeventobserver.h  scenestate.h  textitem.h
include/scene/command/: changemarkedcommand.h  command.h  cursormovecommand.h  dragelemententercommand.h  dragelementleavecommand.h  dropelementcommand.h  moveelementcommand.h  selectitemcommand.h  writeitemcommand.h
include/style/: style.h  styleutil.h
scripts/: compare.lua  core.lua
scripts/grammars/lua/: style.lua  style_new.lua
src/: blockeditorwidget.cpp  blockscene.cpp  main.cpp  mainview.cpp  mainwindow.cpp  mimedata.cpp  minimapview.cpp  parser.cpp
src/item/: abstractelement.cpp  blankItem.cpp  elementbuilder.cpp  item.cpp  layout.cpp  standardelementbuilder.cpp  textitem.cpp
src/item/state/: elementchanged.cpp  elementinvalid.cpp  elementstable.cpp  elementvalid.cpp
src/scene/: abstractelement.cpp  blankItem.cpp  blockscene.cpp  command.cpp  item.cpp  layout.cpp  parser.cpp  rectitemlayout.cpp  reparser.cpp  sceneeventobserver.cpp  scenestate.cpp  textitem.cpp
src/scene/command/: changemarkedcommand.cpp  cursormovecommand.cpp  dragelemententercommand.cpp  dragelementleavecommand.cpp  dropelementcommand.cpp  moveelementcommand.cpp  selectitemcommand.cpp  writeitemcommand.cpp
src/style/: style.cpp  styleutil.cpp
